README.md added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hexact-test",
+  "name": "hexact-task",
   "version": "1.0.0",
   "description": "Link Traversion Script",
   "main": "index.js",
