--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "got": "^11.8.2",
+    "parse-domain": "^3.0.3",
+    "psl": "^1.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
