--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hexact-task",
   "version": "1.0.0",
   "description": "Simple Web Crawler",
+  "bin":"./scripts/bin/traverse",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
