--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hexact-task",
   "version": "1.0.0",
   "description": "Simple Web Crawler",
-  "bin":"./scripts/bin/traverse",
+  "bin": "./scripts/bin/traverse",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
+    "cli-table": "^0.3.6",
     "express": "^4.17.1",
     "got": "^11.8.2",
     "parse-domain": "^3.0.3",
