Added traverse-stream script, some optimizations, and refactoring made

--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "hexact-task",
   "version": "1.0.0",
   "description": "Simple Web Crawler",
-  "bin": "./scripts/bin/traverse",
+  "bin": {
+    "traverse": "./scripts/bin/traverse",
+    "traverse-stream": "./scripts/bin/traverse-stream"
+  },
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon --watch fakeServer fakeServer/index.js",
     "dev": "nodemon scripts/lib/traverse/index.js",
-    "traverse": "./scripts/bin/traverse"
+    "traverse": "./scripts/bin/traverse",
+    "traverse-stream": "./scripts/bin/traverse-stream"
   },
   "keywords": [],
   "author": "Ando",
