added bin:1 to use as a default, because npx will by default sort executable names in asc order and execute first executable

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Simple Web Crawler",
   "main": "./scripts/lib/traverse/index.js",
   "bin": {
+    "1": "./scripts/lib/traverseStream/index.js",
     "traverse": "./scripts/lib/traverse/index.js",
-    "a": "./scripts/lib/traverseStream/index.js"
+    "traverse-stream": "./scripts/lib/traverseStream/index.js"
   },
   "private": true,
   "scripts": {
